--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-flagpack": "^2.0.5",
     "react-icons": "^5.3.0",
+    "react-push-notification": "^1.5.4",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
