--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@headlessui/react": "^2.1.7",
     "@heroicons/react": "^2.1.5",
+    "@stomp/stompjs": "^7.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "classnames": "^2.5.1",
     "cors": "^2.8.5",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
@@ -25,6 +27,7 @@
     "react-toastify": "^10.0.5",
     "sass": "^1.78.0",
     "slick-carousel": "^1.8.1",
+    "sockjs-client": "^1.6.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
@@ -54,6 +57,5 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.10"
-  },
-  "proxy": "http://localhost:8080/"
+  }
 }
